--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -21,3 +21,7 @@ These are the projects I am working on during the my rotation in the Stephens la
 * [Cell cycle single cell data](recreate_cell_cycle_analysis.html)
 
 * [Gilad single cell fastq processing recreation](recreate_giladsinglecell.html)
+
+Continue the Gilad single cell anaylsis:
+
+* [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.Rmd)
