--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -27,3 +27,6 @@ These are the projects I am working on during the my rotation in the Stephens la
 Continue the Gilad single cell anaylsis:
 
 * [Create gene-x-sample count matrices and annotation file](gene_x_sample_count_matrix.Rmd)
+
+
+* [QC single cell libraries](QC_single_cell_library.Rmd)
